Create nbt based file system for data storage, fix some radar issues
For some reason leaving and joining a world with a radar in it causes a concurrent modification exception when loading. It is incredibly difficult to debug.